crates/tui/src/chat_screen/snapshots/savfox_tui__chat_screen__tests__exploring_step6_finish_cat_bar.snap
---
source: crates/tui/src/chat_screen/tests.rs
expression: active_blob(&chat)
---
• Explored
  └ List ls -la
    Read foo.txt, bar.txt
