crates/tui/src/chat_screen/snapshots/savfox_tui__chat_screen__tests__feedback_selection_popup.snap
---
source: crates/tui/src/chat_screen/tests.rs
expression: popup
---
              ▄█▀▀▀▀█▄  ▄█▀▀█▄  ██    ██ ██████  ▄█▀▀█▄  ██    ██
              ██        ██  ██  ██    ██ ██     ██    ██  ██  ██
               ██████  ████████ ██    ██ █████  ██    ██   ████
                    ██ ██    ██  ██  ██  ██     ██    ██  ██  ██
               ▀████▀  ██    ██   ▀██▀   ██      ▀█▄▄█▀  ██    ██

                                Welcome to Savfox
                            Your AI coding assistant




  How was this?

› 1. bug          Crash, error message, hang, or broken UI/behavior.
  2. bad result   Output was off-target, incorrect, incomplete, or unhelpful.
  3. good result  Helpful, correct, high‑quality, or delightful result worth
                  celebrating.
  4. other        Slowness, feature suggestion, UX feedback, or anything else.
