crates/tui/src/chat_screen/snapshots/savfox_tui__chat_screen__tests__interrupt_clears_unified_exec_wait_streak.snap
---
source: crates/tui/src/chat_screen/tests.rs
expression: snapshot
---
cells=1
■ Conversation interrupted - tell the model what to do differently. Something went wrong? Hit `/feedback` to report the issue.
