crates/tui/src/chat_screen/snapshots/savfox_tui__chat_screen__tests__interrupt_exec_marks_failed.snap
---
source: crates/tui/src/chat_screen/tests.rs
expression: exec_blob
---
• Ran sleep 1
  └ (no output)
