crates/tui/src/chat_screen/snapshots/savfox_tui__chat_screen__tests__interrupted_turn_error_message.snap
---
source: crates/tui/src/chat_screen/tests.rs
expression: last
---
■ Conversation interrupted - tell the model what to do differently. Something went wrong? Hit `/feedback` to report the issue.
