crates/tui/src/chat_screen/snapshots/savfox_tui__chat_screen__tests__local_image_attachment_history_snapshot.snap
---
source: crates/tui/src/chat_screen/tests.rs
expression: combined
---
• Viewed Image
  └ example.png
