crates/tui/src/chat_screen/snapshots/savfox_tui__chat_screen__tests__model_picker_filters_hidden_models.snap
---
source: crates/tui/src/chat_screen/tests.rs
expression: popup
---
               ██████  ██    ██ ████████ ██████  ██████  ██    ██
              ██    ██ ██    ██    ██    ██     ██    ██  ██  ██
              ██    ██ ██    ██    ██    ██████ ██    ██   ████
              ██    ██ ██    ██    ██    ██     ██    ██  ██  ██
               ██████   ██████     ██    ██      ██████  ██    ██

                                Welcome to Savfox
                            Your AI coding assistant




  Select model
  Configured providers and their available models.

  Search model
  OpenAI
› test-visible-model (current)  test-visible-model description

  Press enter to select reasoning effort, or esc to dismiss.
