crates/tui/src/chat_screen/snapshots/savfox_tui__chat_screen__tests__model_reasoning_selection_popup.snap
---
source: crates/tui/src/chat_screen/tests.rs
expression: popup
---
              ▄█▀▀▀▀█▄  ▄█▀▀█▄  ██    ██ ██████  ▄█▀▀█▄  ██    ██
              ██        ██  ██  ██    ██ ██     ██    ██  ██  ██
               ██████  ████████ ██    ██ █████  ██    ██   ████
                    ██ ██    ██  ██  ██  ██     ██    ██  ██  ██
               ▀████▀  ██    ██   ▀██▀   ██      ▀█▄▄█▀  ██    ██

                                Welcome to Savfox
                            Your AI coding assistant




  Select Reasoning Level for gpt-5.2-codex

  1. Low               Fast responses with lighter reasoning
  2. Medium (default)  Balances speed and reasoning depth for everyday tasks
› 3. High (current)    Greater reasoning depth for complex problems
  4. Extra high        Extra high reasoning depth for complex problems

  Press enter to confirm or esc to go back
